[gd_scene load_steps=14 format=3 uid="uid://u0hpbk31udpt"]

[ext_resource type="Script" uid="uid://bce5xk40l8ep3" path="res://src/areatower/areatower.gd" id="1_eahom"]
[ext_resource type="Material" uid="uid://cf23vnmu2hp2h" path="res://src/materials/color_replacer.tres" id="1_vpv6n"]
[ext_resource type="Texture2D" uid="uid://do23img3qvki7" path="res://assets/quarrantine_body.png" id="2_1ginh"]
[ext_resource type="Texture2D" uid="uid://dq0mkajgk1goa" path="res://src/entities/download.png" id="3_dxn1p"]
[ext_resource type="Texture2D" uid="uid://ygosfd2s3anc" path="res://assets/quarrantine_aoe.png" id="3_vpv6n"]

[sub_resource type="CircleShape2D" id="CircleShape2D_1ginh"]
radius = 222.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1ginh"]
size = Vector2(157, 162)

[sub_resource type="Animation" id="Animation_y54mq"]
resource_name = "attack"
length = 0.50001
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("attack_visual:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.10000001, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("attack_visual:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="Animation" id="Animation_lwf67"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("attack_visual:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("attack_visual:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_t0n34"]
_data = {
&"RESET": SubResource("Animation_lwf67"),
&"attack": SubResource("Animation_y54mq")
}

[sub_resource type="Animation" id="Animation_kq0am"]
resource_name = "idle"
length = 0.90001
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("body:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3, 0.6),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [0, 1, 2]
}

[sub_resource type="Animation" id="Animation_el8xx"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("body:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_iudwm"]
_data = {
&"RESET": SubResource("Animation_el8xx"),
&"idle": SubResource("Animation_kq0am")
}

[node name="Areatower" type="Node2D" groups=["towers"]]
material = ExtResource("1_vpv6n")
script = ExtResource("1_eahom")

[node name="body" type="Sprite2D" parent="."]
use_parent_material = true
position = Vector2(-2.3841858e-07, 1.9073486e-06)
scale = Vector2(4, 4)
texture = ExtResource("2_1ginh")
hframes = 3
region_rect = Rect2(102.15408, 0, 21.357742, 31.536995)
region_filter_clip_enabled = true

[node name="attack_visual" type="Sprite2D" parent="."]
visible = false
use_parent_material = true
position = Vector2(-7.6293945e-06, 1.0000076)
scale = Vector2(4, 4)
texture = ExtResource("3_vpv6n")
hframes = 3
region_rect = Rect2(107.80786, 0, 35.97174, 35.886265)
region_filter_clip_enabled = true

[node name="detection" type="Area2D" parent="."]
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="detection"]
shape = SubResource("CircleShape2D_1ginh")

[node name="Timer" type="Timer" parent="."]
wait_time = 1.5
autostart = true

[node name="SelectionVisual" type="Sprite2D" parent="."]
visible = false
modulate = Color(0, 1, 0, 0.078431375)
self_modulate = Color(0, 1, 0, 0.14901961)
position = Vector2(0.87500477, -0.35483313)
scale = Vector2(0.64547414, 0.70967746)
texture = ExtResource("3_dxn1p")

[node name="selectıonarea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="selectıonarea"]
position = Vector2(-0.5, -5)
shape = SubResource("RectangleShape2D_1ginh")

[node name="AttackPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_t0n34")
}

[node name="Idle" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_iudwm")
}
autoplay = "idle"

[connection signal="area_entered" from="detection" to="." method="_on_damage_zone_area_entered"]
[connection signal="area_exited" from="detection" to="." method="_on_damage_zone_area_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="input_event" from="selectıonarea" to="." method="_on_detection_input_event"]
